Fixed pagination alignment

--- a/src/components/pagination/src/Pagination.css
+++ b/src/components/pagination/src/Pagination.css
@@ -11,7 +11,6 @@
 
 .ui-pagination__text-next {
 	color: #0DB9E9;
-    margin-right: 10px;
     cursor: pointer;
 }
 
@@ -42,7 +41,14 @@
 
 .ui-pagination__left-arrow, .ui-pagination__right-arrow{
     cursor: pointer;
-    height: 100%;
-    width: 30px;
 }
 
+.ui-pagination__control {
+    display: flex;
+    align-items: center;
+}
+
+.ui-pagination__control .ui-text {
+    margin-top: 0;
+    margin-bottom: 0;
+}
